--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" moznomarginboxes mozdisallowselectionprint>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes">
-  <title>Rental Resume Generator</title>
+  <title>Rental Resume Generator | Rental Resume Builder</title>
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body><div id="app"></div></body>
