--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" moznomarginboxes mozdisallowselectionprint>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rental Resume Generator | Rental Resume Builder</title>
     <link rel="shortcut icon" href="%PUBLIC_URL%/icons/favicon.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/apple-touch-icon-60x60.png" />
