Adding SEO and sharing related tags / icons

--- a/public/index.html
+++ b/public/index.html
@@ -3,28 +3,32 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rental Resume Generator | Rental Resume Builder</title>
+    <title>Rental Resume Generator</title>
+    <meta name="description" content="A simple web app to help generate and print a basic rental resume.">
     <link rel="shortcut icon" href="%PUBLIC_URL%/icons/favicon.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/apple-touch-icon-60x60.png" />
     <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/icons/apple-touch-icon-120x120.png" />
     <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/icons/apple-touch-icon-152x152.png" />
     <link rel="apple-touch-icon" sizes="167x167" href="%PUBLIC_URL%/icons/apple-touch-icon-167x167.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/icons/apple-touch-icon-180x180.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <meta name="apple-mobile-web-app-title" content="Rental Resume">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="#334050">
     <meta name="theme-color" content="#334050">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Rental Resume Generator">
+    <meta name="twitter:description" content="A simple web app to help generate and print a basic rental resume.">
+    <meta name="twitter:image" content="https://rental-resume.com/icons/twitter-icon-600x600.png">
+    <meta property="og:title" content="Rental Resume Generator" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://rental-resume.com/" />
+    <meta property="og:image" content="https://rental-resume.com/icons/og-image-1200x630.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:description" content="A simple web app to help generate and print a basic rental resume." />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" type="text/css">
 
-    <!--
-      Start Single Page Apps for GitHub Pages
-    -->
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
@@ -54,9 +58,6 @@
         }
       }(window.location))
     </script>
-    <!--
-      End Single Page Apps for GitHub Pages
-    -->
   </head>
   <body>
     <noscript>
